pingbuller - fix overflow-bag with carousel-indicators

--- a/ping/src/css/style.less
+++ b/ping/src/css/style.less
@@ -389,6 +389,8 @@ footer {
 
   .carousel-indicators {
     margin-left: 0;
+    width: 60px;
+    left: 70%
   }
 
   .carousel-caption {
